--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -9,10 +9,9 @@ button (class= 'for_short_form', id= 'button') = Answer
 
 .answers
   table  
-    = render :partial => "answers/answer", :collection => @question.answers_sort_by_best
+    = render :partial => "answers/answer", :collection => @question.answers.order(best: :desc)
 
   
-
 .answer-errors
   = render 'shared/errors', resource: @answers
 
