--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -10,12 +10,14 @@ table
         td
           = link_to file.filename.to_s, url_for(file)
         td
-          = link_to 'delete file', delete_attachment_path(file), method: 'delete'
+          - if @question.author == current_user
+            = link_to 'delete file', delete_attachment_path(file), method: 'delete'
 
 button (class= 'for_short_form', id= 'button') = Answer
 
-= button_to "delete", question_path(@question), :method => :delete 
-= button_to "edit", edit_question_path(@question), :method => :get
+- if @question.author == current_user
+  = button_to "delete", question_path(@question), :method => :delete 
+  = button_to "edit", edit_question_path(@question), :method => :get
 
 .answers
   table  
