--- a/app/views/answers/show.html.slim
+++ b/app/views/answers/show.html.slim
@@ -5,7 +5,7 @@ h2= 'Answer show'
 - if @answer.files.attached?
   - @answer.files.each do |file|
     p= link_to file.filename.to_s, url_for(file)
-    p= link_to 'delete', delete_attachment_path(file), method: :delete
+    p= link_to 'delete', attachment_path(file), method: :delete
 
 p= @answer.question.title
 p= @answer.question.body
