--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -11,7 +11,7 @@ table
           = link_to file.filename.to_s, url_for(file)
         td
           - if @question.author == current_user
-            = link_to 'delete file', delete_attachment_path(file), method: 'delete'
+            = link_to 'delete file', attachment_path(file), method: 'delete'
 
 button (class= 'for_short_form', id= 'button') = Answer
 
