added user can add link in update question and answer and user can delete links

--- a/app/views/answers/edit.html.slim
+++ b/app/views/answers/edit.html.slim
@@ -1,5 +1,8 @@
 = render 'shared/errors', resource: @answer
 
+= render 'shared/show_links', resource: @answer
+
+
 br
 tr=  
 - @answer.files.each do |file|
