--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,8 +1,17 @@
-= form_with model: answer do |f|
-  = f.label :body
-  = f.text_area :body
+= form_with model: [@question, @answer].compact do |f|
+  p
+    = f.label :body
+    = f.text_area :body
+  p
+    = f.label :files
+    = f.file_field :files, multiple: true
 
-  = f.label :files
-  = f.file_field :files, multiple: true
-
+  = f.fields_for :links, @answer.links.build do |l|
+    p
+      = l.label :title
+      = l.text_field :title
+    p
+      = l.label :url
+      = l.text_field :url
+  
   = f.submit 'Save answer'
