--- a/app/views/answers/new.html.slim
+++ b/app/views/answers/new.html.slim
@@ -1,6 +1,6 @@
 = render 'shared/errors', resource: @answer
 
-- answer.files.each do |file|
-  td= link_to file.filename.to_s, url_for(file)
+- @answer.files.each do |file|
+    td= link_to file.filename.to_s, url_for(file)
 
 = render 'form', question: @question
