--- a/app/views/questions/_answer_form_short.slim
+++ b/app/views/questions/_answer_form_short.slim
@@ -1,4 +1,11 @@
-  = form_with url: question_answers_path(@question), html:{ id: 'form', class: 'hidden'} do |f|
+  = form_with model: [@question, @answer], html:{ id: 'form', class: 'hidden'} do |f|
     = f.text_area :body
     = f.file_field :files, multiple: true
+    = f.fields_for :links do |l|
+      p
+        = l.label :title
+        = l.text_field :title
+      p
+        = l.label :url
+        = l.text_field :url
     = f.submit 'Send answer'
