--- a/app/views/questions/_answer_form_short.slim
+++ b/app/views/questions/_answer_form_short.slim
@@ -1,4 +1,5 @@
   = form_with model: [@question, @answer], html:{ id: 'form', class: 'hidden'} do |f|
+    = f.label :body
     = f.text_area :body
     = f.file_field :files, multiple: true
     = f.fields_for :links do |l|
