--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -3,7 +3,7 @@ br
 h3= @question.title
 p= @question.body
 
-= button_to "Edit", edit_question_path(@question), method: :get
+= button_to "Edit Question", edit_question_path(@question), method: :get
 
 table 
   tr
