--- a/app/views/shared/_log_out.slim
+++ b/app/views/shared/_log_out.slim
@@ -1,6 +1,7 @@
 nav
   a href= root_path 'Qna'
   - if current_user
+    = button_to 'profile', profile_path, method: :get
     = button_to 'log out', destroy_user_session_path, method: :delete
   - else 
     = button_to 'log in', user_session_path 
