--- a/app/views/shared/_show_links.slim
+++ b/app/views/shared/_show_links.slim
@@ -1,12 +1,13 @@
-h2
-  'Links'
+- if resource.persisted?
+  h2
+    'Links'
 
 table 
   tr
-    - if resource.links.present?
-      - resource.links.each do |link|
+    - resource.links.each do |link|
+      - if link.title.present?
         td
-          = link_to link.title, "http://#{link.url}"
+          = link_to link.title, "#{link.url}"
         td
           = link_to 'Delete link'
 
